# rc_rsd

./: .gitignore  MESServer.py
KukaROS/src/: kukaROS.cpp
RC_Camera/: CMakeLists.txt  CMakeLists.txt~  camera.yaml  camera.yml  package.xml  package.xml~
RC_Camera/include/uvc_cam/: uvc_cam.h
RC_Camera/launch/: camera.launch  camera_node.launch  missionplanner.launch~  rc_camera.launch  rc_camera.launch~
RC_Camera/src/: cameraNode.cpp  cameraNodeOld.cpp  uvc_cam.cpp
RC_Grasp/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
RC_Grasp/launch/: grasp.launch  safety.launch~
RC_Grasp/src/: graspNode.cpp
RC_Grasp/srv/: Move.srv  setConfiguration.srv
RC_HMI/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  resources.qrc
RC_HMI/launch/: hmi.launch  hmi.launch~
RC_HMI/src/: HMIPlugin.cpp  HMIWidget.cpp  HMIWidget.hpp  HMIWidget.ui  resources.qrc  ui_HMIWidget.h  ui_HMIWidget.h~  ui_TymPlugin.h~
RC_HMI/src/UI/: starGameUI.ui
RC_HMI/srv/: Open.srv  getBricks.srv  setConfiguration.srv
RC_KukaScene/: CollisionSetup.prox.xml  CollisionSetup.prox.xml~  Scene.wc.xml  Scene.wc.xml~
RC_KukaScene/Geometry/: box.ac  box.stl  conveyor.SLDPRT  conveyor.ac  fence.ac  support.STL  support.ac
RC_KukaScene/KukaKR6R700/: KukaKR6R700.wc.xml  KukaKR6R700.wc.xml~
RC_KukaScene/KukaKR6R700/Geometry/: Base.ac  Joint1.ac  Joint2.ac  Joint3.ac  Joint4.ac  Joint5.ac  Joint6.ac
RC_KukaScene/PG70/: PG70.wc.xml
RC_KukaScene/PG70/Geometry/: basejaw.dae  basejaw.stl
RC_MESClient/: CMakeLists.txt  package.xml
RC_MESClient/launch/: mesclient.launch
RC_MESClient/msg/: server.msg
RC_MESClient/src/: mesClientNode.cpp
RC_MESServer/: CMakeLists.txt  package.xml  package.xml~
RC_MESServer/launch/: messerver.launch  messerver.launch~
RC_MESServer/src/: messerverNode.cpp
RC_Main/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
RC_Main/launch/: main.launch
RC_Main/src/: mainNode.cpp
RC_Main/srv/: .srv  MoveConv.srv  getBricks.srv  grabBrick.srv
RC_PLC/: CMakeLists.txt  package.xml  package.xml~
RC_PLC/launch/: plc.launch  plc.launch~
RC_PLC/src/: plcNode.cpp
RC_PLC/srv/: ChangeDirection.srv  MoveConv.srv
RC_Safety/: CMakeLists.txt~  package.xml  package.xml~
RC_Safety/launch/: safety.launch
RC_Safety/src/: safetyNode.cpp
RC_Vision/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
RC_Vision/launch/: camera.launch~  vision.launch  vision.launch~
RC_Vision/msg/: .msg  getBricks.msg
RC_Vision/src/: visionNode.cpp
RC_Vision/srv/: getBricks.srv
RSD_HMI/src/: HMIPlugin.cpp  HMIPlugin.hpp  HMIPlugin.hpp~  HMIWidget.cpp  ui_HMIWidget.h  ui_TymWidget.h~
RSD_HMI/src/UI/: SamplePlugin.ui
VisionTest/: CMakeLists.txt  package.xml
VisionTest/src/: visionNode.cpp
build-RC_Grasp-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  rc_grasp.cbp
build-RC_Grasp-Desktop-Default/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  rc_grasp-msg-extras.cmake.develspace.in  rc_grasp-msg-extras.cmake.installspace.in  setup_cached.sh
build-RC_Grasp-Desktop-Default/catkin_generated/installspace/: rc_grasp-msg-paths.cmake  rc_grasp.pc  rc_graspConfig.cmake
build-RC_Grasp-Desktop-Default/cmake/: rc_grasp-genmsg-context.py  rc_grasp-genmsg.cmake
build-RC_Grasp-Desktop-Default/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
build-RC_Grasp-Desktop-Default/devel/lib/pkgconfig/: rc_grasp.pc
build-RC_Grasp-Desktop-Default/devel/share/rc_grasp/cmake/: rc_grasp-msg-paths.cmake  rc_graspConfig.cmake
build-RC_Grasp-Desktop-Default/gtest/: CTestTestfile.cmake  Makefile  gtest.cbp
image_common/image_transport/tutorial/: CMakeLists.txt
launch/: grasp.launch  kuka.launch  robotCell.launch  vision.launch
pg70/: CMakeLists.txt  package.xml
pg70/.svn/: wc.db
pg70/msg/: PG70State.msg
pg70/src/: PG70ServiceInterface.hpp  PG70Sim.cpp  pg70sim_main.cpp
serial/src/impl/: unix.cc
